# solvemcp

./: CHANGELOG.md  README.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
nbs/: index.ipynb
solvemcp/: __init__.py  _modidx.py  client.py  transports.py
tests/: echoserver.py  fake_payloads.py  tests.py
