[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solvemcp"
dynamic = ["version"]
description = "solvemcp - a small, pragmatic Model Context Protocol (MCP) client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Jeremy Howard" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["fastcore", "httpx"]

[project.optional-dependencies]
dev = [ "fastship", "build", "twine", ]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/solvemcp"
Repository = "https://github.com/AnswerDotAI/solvemcp"
Documentation = "https://AnswerDotAI.github.io/solvemcp/"

[tool.setuptools.dynamic]
version = { attr = "solvemcp.__version__" }

[project.entry-points.nbdev]
safepyrun = "solvemcp._modidx:d"

[tool.setuptools.packages.find]
include = ["solvemcp"]

[tool.nbdev]
allowed_metadata_keys = ['solveit_dialog_mode', 'solveit_ver']
